--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="css/index.css" />
         <script src="js/index.js" defer></script>
+        <link rel="icon" href="assets/icons8-xbox-a-100.png">
     </head>
     <body>
         <header>
